Fixed Modal text, and made second paragraph of about section disappear on mobile devices.

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -75,7 +75,7 @@
         margin-top: 50px;
     }
     #optionalText{
-        opacity: 0;
+        display: none;
     }
 
 }
